GRBK-305 : Fixing issues that FindBugs had discovered. For issues that I didn't feel confortable fixing, I added a //FIXME comment.